[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/main_game.gd" type="Script" id=1]

[node name="MainGame" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite"]
position = Vector2( 640, 360 )

[node name="UI" type="CanvasLayer"]

[node name="DialogueBox" type="RichTextLabel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -150.0
margin_right = 400.0
margin_bottom = -50.0
bbcode_enabled = true
bbcode_text = "Dialogue text goes here..."
text = "Dialogue text goes here..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterPortrait" type="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -200.0
margin_right = 100.0
margin_bottom = 0.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesContainer" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -250.0
margin_right = 200.0
margin_bottom = -160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MetricsDisplay" type="Label"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 100.0
text = "Customer Patience: 100%
Boredom: 0%
Manager Annoyance: 0%
Theft Loss: 0%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeDisplay" type="Label"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 40.0
text = "0:00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
